[project]
name = "personalized-map"
version = "0.1.0"
description = "Web interface to generate map with scatter plot"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "bokeh==2.4.3",
    "matplotlib>=3.10.0",
    "numpy==1.25",
    "openpyxl>=3.1.5",
    "pandas<=2.0.0",
    "streamlit==1.41.0",
]
